--- a/index.html
+++ b/index.html
@@ -1,37 +1,20 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Степанчук Т.В., ІС-33, студент, біографія, хобі, освіта">
-    <meta name="description" content="Лабораторна №1">
-    <title>Степанчук Т.В., ІС-33</title>
+  <meta charset="UTF-8">
+  <title>Лабораторні роботи</title>
 </head>
 <body>
-    <h2>Степанчук Тимофій Вадимович</h2>
-    <p>Народився 13 січня 2006 року, м. Київ</p>
-    <p>Закінчив 271 спеціалізовану школу м. Києва.  
-       Зараз навчаюся у Національному технічному університеті України «КПІ імені Ігоря Сікорського»</p>
-
-    <h3>Мої хобі:</h3>
-    <ul>
-        <li>Програмування</li>
-        <li>Тренування в спортзалі</li>
-        <li>Риболовля</li>
-    </ul>
-
-    <h3>Мої улюблені фільми:</h3>
-    <ol>
-        <li>«Гаррі Поттер»</li>
-        <li>«Реальна сталь»</li>
-        <li>«Інтерстеллар»</li>
-    </ol>
-
-    <h3>Моє улюблене місто</h3>
-    <p>Одним з найулюбленіших міст для мене є Тбілісі. Столиця Грузії вражає своєю історією, атмосферою, гостинністю та унікальною культурою. Старе місто Тбілісі зачаровує вузькими вуличками й різнокольоровими балконами.</p>
-
-    <a href="https://www.tbiliso.com.ua" target="_blank">
-        <img src="https://www.advantour.com/img/georgia/images/tbilisi.jpg" alt="Тбілісі" width="500">
-    </a>
+  <h1>Лабораторні роботи</h1>
+  <ul>
+    <li><a href="lab1.html">Лабораторна робота 1</a></li>
+    <li><a href="lab2.html">Лабораторна робота 2</a></li>
+    <li><a href="lab3.html">Лабораторна робота 3</a></li>
+    <li><a href="lab4.html">Лабораторна робота 4</a></li>
+    <li><a href="lab5.html">Лабораторна робота 5</a></li>
+    <li><a href="lab6.html">Лабораторна робота 6</a></li>
+    <li><a href="lab7.html">Лабораторна робота 7</a></li>
+    <li><a href="lab8.html">Лабораторна робота 8</a></li>
+  </ul>
 </body>
 </html>
-
