--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="lab4.html">Лабораторна робота 4</a></li>
     <li><a href="lab5.html">Лабораторна робота 5</a></li>
     <li><a href="lab6.html">Лабораторна робота 6</a></li>
-    <li><a href="lab7.html">Лабораторна робота 7</a></li>
+    <li><a href="lab7_/index.html">Лабораторна робота 7</a></li>
     <li><a href="lab8.html">Лабораторна робота 8</a></li>
   </ul>
 </body>
