--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="lab5.html">Лабораторна робота 5</a></li>
     <li><a href="lab6.html">Лабораторна робота 6</a></li>
     <li><a href="https://t1m0feevka.github.io/Front_End/lab7_/">Лабораторна робота 7</a></li>
-    <li><a href="lab8.html">Лабораторна робота 8</a></li>
+    <li><a href="lab8/index.html">Лабораторна робота 8</a></li>
   </ul>
 </body>
 </html>
